Finished pull request #190